# ReadKnows

./: .env  .gitignore  LICENSE  README-zh.md  README.md  android_debug_install.sh  apk.sh.example  github-sync.sh  install-en.sh  install-zh.sh  install.sh  package-lock.json  package.json
app/: BUILD.md  README.md  build-apk.sh  build.gradle  gradle.properties  settings.gradle
backend/: ._Dockerfile.debian  .dockerignore  .env  .env.example  Dockerfile  Dockerfile.bak  Dockerfile.debian  fix-jwt-secret.sh  get-backend-logs.sh  package.json  tsconfig.json  version.json
cache/: .gitignore  README.md
docker-images/: README.md
frontend/: .dockerignore  Dockerfile  Dockerfile.bak  MULTI_APK_README.md  Manage  apk-config.json.example  apk-profiles.json.example  build-apk-mac.sh  build-apk-main.sh  build-apk-multi.sh  build-apk-with-server.sh  build-apk.sh  capacitor.config.ts  convert-api-methods.js  index.html  nginx-ssl.conf  nginx.conf  package.json  start-nginx-ssl.sh  start-nginx.sh  tailwind.config.js  vite.config.ts  vitest.config.ts
ocr-api/: .dockerignore  Dockerfile  check-health.sh  docker-compose.yml  download-models.sh  download_models.py  init-models.sh  requirements.txt  start.sh
sh/: SSL_SETUP.md  (+60 more)
tts-api/: .gitignore  API.md  Dockerfile  INSTALL.md  README.md  docker-entrypoint.sh  install-docker.sh  install-models-docker.sh  install-models.sh  pre-download-huggingface-models.sh  pyproject.toml  requirements.txt  run.sh  version.json
tts-api/scripts/: download-cosyvoice.py  download-indextts2.py  download-multitts.py
tts-api/static/: index.html
(+386 files in other folders)
