[project]
name = "readknow-tts-api"
version = "2.0.0"
description = "TTS Service with multiple engines support (Edge-TTS, Qwen-TTS, IndexTTS2, CosyVoice, MultiTTS)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "edge-tts>=6.1.0",
    "requests>=2.31.0",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

